Rewards page and add btn

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,7 +6,7 @@
 }
 
 .icon-circle {
-  display: flex;
+  display: inline-flex;
   border-radius: 50%;
   background-color: #FBF0AC;
   justify-content: center;
