--- a/app/views/employees/dashboard.html.erb
+++ b/app/views/employees/dashboard.html.erb
@@ -13,34 +13,24 @@
           <%= @user.email %>
         </p>
       </div>
+
       <div class="text-center">
-
         <button type="button" class="btn-carat-regular" data-toggle="modal" data-target="#uploadModal"> UPLOAD CSV </button> <%= render "upload_modal" %>
-
-
         <div id="hider" class="<%= @employees.present? ? '' : 'hide' %>">
-
-            <button type="button" class="btn-carat-go">
-              <%= link_to "Save now", rewards_path %>
-            </button>
+        <%= link_to "Save now", rewards_path, class: "btn-carat-go" %>
         </div>
-
-
-
       </div>
+
       <hr>
   <!--   need to have different views here for login or not login-->
       <div>
         <!-- Button trigger modal -->
-
         <h3 class="heading-flex">
           <span>Employees List</span>
           <button type="button" class="btn-carat-add" data-toggle="modal" data-target="#addModal"> + </button>
         </h3>
         <%= render "add_modal" %>
-
         <div id="employee-list">
-
           <% @employees.each do |e| %>
             <%= render 'employee_card', e: e %>
           <% end %>
@@ -52,7 +42,6 @@
   <div class="col-sm-8">
     <div id="map" data-markers="<%= @markers.to_json %>"></div>
   </div>
-
 </div>
 
 <button id="init-map" class="hide">
