--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -36,6 +36,9 @@
           <li><%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "navbar-wagon-item navbar-wagon-link" %></li>
           <% else %>
           <li><%= link_to t(".sign_in", default: "Login"), new_user_session_path , class: "navbar-wagon-item navbar-wagon-link" %></li>
+          <li>
+            <a href="#how-it-works" class="slow-anchor">How It Works</a>
+          </li>
         <% end %>
 
 
