work on order summary

--- a/app/views/pages/rewards.html.erb
+++ b/app/views/pages/rewards.html.erb
@@ -52,7 +52,7 @@
 
         <div class="col-xs-12 col-md-3 col-sm-3">
           <h4><strong>Company Details</strong></h4>
-          <p> Derka Company</p>
+          <p><%= current_user.company_name %></p>
         </div>
 
         <div class="col-xs-12 col-md-3 col-sm-3">
@@ -77,4 +77,3 @@
      <button type="button" class="btn-carat-regular">PROCEED TO ORDER</a>
   </div>
 </div>
-
