--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,2 +1,42 @@
-<h1>Orders#new</h1>
-<p>Find me in app/views/orders/new.html.erb</p>
+
+<div class="container content-padding">
+  <h3 class="text-center title-order order-line">Order Summary</h3>
+  <div class="row">
+    <div class="col-md-3">
+      <div class="order-image">
+        <%= image_tag "route.svg", class:"icons text-center" %>
+      </div>
+
+      <div class="route-info text-left">
+        <h4><strong>Route Fast A</strong></h4>
+        <p>Morning Schedule</p>
+      </div>
+    </div>
+
+    <div class="col-md-9">
+      <div class="row order-row">
+        <div>
+          <p><%= current_user.company_name %></p>
+          <p><%= current_user.address %></p>
+        </div>
+        <div>
+          <p><strong>BRL</strong></p>
+          <p>$ XXXX</p>
+        </div>
+      </div>
+      <div class="row order-row">
+        <div>
+          <p>Company Name</p>
+          <p>Company Address</p>
+        </div>
+        <div>
+          <p><strong>BRL</strong></p>
+          <p>$ XXXX</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
