Make hamburger auto-close

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,6 +12,7 @@
   <div>
     <h3 class="text-center">How it Works</h3>
     <div class="row">
+
       <div class="col-xs-12 col-sm-4">
         <div class="card text-center">
           <div class="icon-circle icon">
@@ -47,6 +48,8 @@
           </div>
         </div>
       </div>
+
+    </div>
   </div>
   <div class="flex-center">
     <a href="#" class="back-to-top">
