order summary raw

--- a/app/assets/stylesheets/pages/_order.scss
+++ b/app/assets/stylesheets/pages/_order.scss
@@ -14,6 +14,7 @@
 .order-image {
   display: inline-flex;
   background-color: #FBF0AC;
+  border-radius: 50%;
   justify-content: center;
   align-items: center;
   height: 150px;
