--- a/app/views/pages/rewards.html.erb
+++ b/app/views/pages/rewards.html.erb
@@ -48,24 +48,24 @@
 
   <div class="wrapper-order text-center">
 
-    <div class="row">
+    <div class="order-final">
 
-        <div class="col-xs-12 col-md-3 col-sm-3">
+        <div>
           <h4><strong>Company Details</strong></h4>
           <p><%= current_user.company_name %></p>
         </div>
 
-        <div class="col-xs-12 col-md-3 col-sm-3">
+        <div>
           <h4><strong>Order Number</strong></h4>
           <p>DRF0R4</p>
         </div>
 
-        <div class="col-xs-12 col-md-3 col-sm-3">
+        <div>
           <h4><strong>Payment Type</strong></h4>
           <p>Credit Card</p>
         </div>
 
-        <div class="col-xs-12 col-md-3 col-sm-3">
+        <div>
           <h4><strong>TOTAL</strong></h4>
           <p><strong>$300 BRL</strong></p>
         </div>
