--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,6 +1,6 @@
-
 <div class="container content-padding">
   <h3 class="text-center title-order order-line">Order Summary</h3>
+
   <div class="row">
     <div class="col-md-3 text-center">
       <div class="order-image">
@@ -14,7 +14,7 @@
     </div>
 
     <div class="col-md-9">
-      <div class="row order-row">
+      <div class="order-row">
         <div>
           <p><strong>User Details</strong></p>
           <p><%= current_user.company_name %></p>
@@ -25,7 +25,8 @@
           <p>DER4T1</p>
         </div>
       </div>
-      <div class="row order-row">
+
+      <div class="order-row">
         <div>
           <p><strong>Taxes</strong></p>
           <p>IRPF Tax</p>
@@ -35,16 +36,19 @@
           <p>$ XXXX</p>
         </div>
       </div>
-      <div class="row order-row">
+
+      <div class="order-row">
         <div>
           <p><strong>TOTAL</strong></p>
         </div>
         <div>
-          <button type="button" class="btn-carat-regular">CHECKOUT</a>
+          <p>$ XXXX</p>
         </div>
       </div>
+      <div class="text-right">
+        <button type="button" class="btn-carat-checkout">CHECKOUT</button>
+      </div>
     </div>
-
   </div>
 </div>
 
