Add links between all pages

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -51,8 +51,8 @@
 
       <div class="order-row">
         <div>
-          <button type="button" class="btn-carat-checkout text-right">CHECKOUT</a>
-        </div>
+    <%= link_to "CHECKOUT", dashboard_path, class: "btn-carat-go text-center" %>
+  </div>
       </div>
     </div>
   </div>
