--- a/app/views/pages/rewards.html.erb
+++ b/app/views/pages/rewards.html.erb
@@ -73,7 +73,7 @@
     </div>
   </div>
 
-  <div class="row checkout-btn">
-     <button type="button" class="btn-carat-regular">PROCEED TO ORDER</a>
+  <div>
+    <%= link_to "PROCEED TO ORDER", orders_new_path, class: "btn-carat-go text-center" %>
   </div>
 </div>
