--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -33,7 +33,7 @@
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <% if user_signed_in? %>
-          <li><%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "navbar-wagon-item navbar-wagon-link" %></li>
+          <li><%= link_to t(".sign_out", default: "Log Out"), destroy_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %></li>
           <% else %>
           <li><%= link_to t(".sign_in", default: "Login"), new_user_session_path , class: "navbar-wagon-item navbar-wagon-link" %></li>
           <li>
