how it works in progress

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -3,6 +3,12 @@
   background-position: center;
   justify-content: center;
   align-items: center;
+  p {
+    padding-top: 20px;
+  }
+  h4 {
+    padding-top: 20px;
+  }
 }
 
 .icon-circle {
