--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -32,8 +32,20 @@ body {
   margin: 0px;
 }
 
+.back-to-top {
+    display: block;
+    padding-top: 20px;
+}
+
 .btn-box {
   padding-top: 20px;
+}
+
+.wrapper-row {
+  padding-top: 50px;
+  h3 {
+    margin-top: 30px;
+  }
 }
 
 .row {
@@ -44,7 +56,7 @@ body {
   height: 100vh;
   background-color: #FEFCEE;
   h3 {
-  margin-top: 100px;
+  margin-top: 130px;
   font-spacing: 2px;
   font-family: Sofia;
   font-size: 40px;
@@ -53,7 +65,6 @@ body {
 
 .icons {
   height: 10vh;
-  color: red;
 }
 
 .card-text h4 {
