--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
 <div id="how-it-works" class="container">
   <div>
     <h3 class="text-center">How it Works</h3>
-    <div class="row">
+    <div class="row wrapper-row">
 
       <div class="col-xs-12 col-sm-4">
         <div class="card text-center">
