--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,7 +7,6 @@
   height: 100px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
-  width:98.9vw;
   bottom: 0px;
 }
 
@@ -22,6 +21,6 @@
   opacity: 1;
 }
 
-.down {
-  min-height: 86vh;
+.content {
+  min-height: calc(100vh - 100px);
 }
