--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
   <body>
     <%= render 'shared/navbar' %>
 
-    <div class="down">
+    <div class="content">
       <%= yield %>
     </div>
 
