fill icons and how to works elements session

--- a/app/assets/stylesheets/components/_employee_card.scss
+++ b/app/assets/stylesheets/components/_employee_card.scss
@@ -1,7 +1,9 @@
 .employee-card {
   margin: 20px 10px;
+  color: #364248;
   a{
     font-size: 12px;
+    color: #F4D213;
   }
   h3 {
     font-size: 18px;
