--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -73,6 +73,12 @@ body {
 .card-text h4 {
   font-weight: 700;
   margin-top: 20px;
+  font-family: Sofia;
+  font-size: 26px;
+  color: #364248;
+  p {
+    color: #364248;
+  }
 }
 
 .wrapper-cards {
