--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,7 +42,7 @@
             <%= image_tag "school-bus.svg", class:"icons text-center" %>
           </div>
           <div class="card-text">
-            <h4 class="how-heading">Save & commute better</h4>
+            <h4 class="how-heading">Commute better</h4>
             <p>Your company saves on transportation costs and your employees get to work comfortably and on time.</p>
           </div>
         </div>
