--- a/app/views/pages/rewards.html.erb
+++ b/app/views/pages/rewards.html.erb
@@ -7,7 +7,7 @@
     </div>
 
     <h3 class="text-center title">Your Savings with Carat</h3>
-    <div class="card-text savings">
+    <div class="savings">
       <div class="wrapper-summary">
 
         <div class="row">
