--- a/app/views/pages/rewards.html.erb
+++ b/app/views/pages/rewards.html.erb
@@ -16,7 +16,7 @@
           </div>
 
           <div class="col-xs-6">
-            <h3 class="text-right"> $40,000</h3>
+            <h3 class="text-right"> <%= @annual_cost %> </h3>
           </div>
         </div>
 
@@ -26,7 +26,7 @@
           </div>
 
           <div class="col-xs-6">
-            <h3 class="text-right"> $20,000</h3>
+            <h3 class="text-right"><%= @total_cost %></h3>
           </div>
         </div>
 
