--- a/app/views/pages/rewards.html.erb
+++ b/app/views/pages/rewards.html.erb
@@ -1,4 +1,4 @@
-<div class="container content-padding">
+<div class="container content-padding bottom-padding">
   <div class="card-reward text-center">
     <div class="icon-space">
       <div class="icon-circle">
@@ -46,30 +46,27 @@
     </div>
   </div>
 
-  <div class="wrapper-order text-center">
+  <div class="wrapper-order">
+    <div class="row">
+      <div class="col-sm-12 col-md-3 visible-md-block visible-lg-block">
+        <h4><strong>Company Details</strong></h4>
+        <p><%= current_user.company_name %></p>
+      </div>
 
-    <div class="order-final">
+      <div class="col-sm-12 col-md-3 text-center visible-md-block visible-lg-block">
+        <h4><strong>Order Number</strong></h4>
+        <p>DRF0R4</p>
+      </div>
 
-        <div>
-          <h4><strong>Company Details</strong></h4>
-          <p><%= current_user.company_name %></p>
-        </div>
+      <div class="col-sm-12 col-md-3 text-center visible-md-block visible-lg-block">
+        <h4><strong>Payment Type</strong></h4>
+        <p>Credit Card</p>
+      </div>
 
-        <div>
-          <h4><strong>Order Number</strong></h4>
-          <p>DRF0R4</p>
-        </div>
-
-        <div>
-          <h4><strong>Payment Type</strong></h4>
-          <p>Credit Card</p>
-        </div>
-
-        <div>
-          <h4><strong>TOTAL</strong></h4>
-          <p><strong>$300 BRL</strong></p>
-        </div>
-
+      <div class="col-sm-12 col-md-3 text-right">
+        <h4><strong>TOTAL</strong></h4>
+        <p><strong>$300 BRL</strong></p>
+      </div>
     </div>
   </div>
 
