started calculations for savings with carat

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -21,8 +21,8 @@
           <p><%= current_user.address %></p>
         </div>
         <div>
-          <p><strong>Order No.</strong></p>
-          <p class="text-right">DER4T1</p>
+          <p><strong>Price</strong></p>
+          <p class="text-right"><%= @total_cost - @annual_cost %> </p>
         </div>
       </div>
 
