--- a/app/views/pages/rewards.html.erb
+++ b/app/views/pages/rewards.html.erb
@@ -12,11 +12,11 @@
 
         <div class="row">
           <div class="col-xs-6">
-            <h4 class="text-left">You actual cost</h4>
+            <h4 class="text-left">Your annual cost (employee/yr)</h4>
           </div>
 
           <div class="col-xs-6">
-            <h3 class="text-right"> <%= @annual_cost %> </h3>
+            <h3 class="text-right">  </h3>
           </div>
         </div>
 
@@ -26,7 +26,7 @@
           </div>
 
           <div class="col-xs-6">
-            <h3 class="text-right"><%= @total_cost %></h3>
+            <h3 class="text-right"> p</h3>
           </div>
         </div>
 
@@ -37,7 +37,7 @@
             </div>
 
             <div class="col-xs-6">
-              <h3 class="text-right"> $20,000</h3>
+              <h3 class="text-right"></h3>
             </div>
           </div>
         </div>
@@ -46,7 +46,7 @@
     </div>
   </div>
 
-  <div class="wrapper-order">
+  <!-- <div class="wrapper-order">
     <div class="row">
       <div class="col-sm-12 col-md-3 visible-md-block visible-lg-block">
         <h4><strong>Company Details</strong></h4>
@@ -65,10 +65,10 @@
 
       <div class="col-sm-12 col-md-3 text-right">
         <h4><strong>TOTAL</strong></h4>
-        <p><strong>$300 BRL</strong></p>
+        <p>$300 BRL</p>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div>
     <%= link_to "PROCEED TO ORDER", orders_new_path, class: "btn-carat-go text-center" %>
