--- a/app/views/pages/rewards.html.erb
+++ b/app/views/pages/rewards.html.erb
@@ -12,21 +12,21 @@
 
         <div class="row">
           <div class="col-xs-6">
-            <h4 class="text-left">Your annual cost (employee/yr)</h4>
+            <h4 class="text-left">Public Transportation (per year)</h4>
           </div>
 
           <div class="col-xs-6">
-            <h3 class="text-right">  </h3>
+            <h3 class="text-right">R$ 56.019,60</h3>
           </div>
         </div>
 
         <div class="row">
           <div class="col-xs-6">
-            <h4 class="text-left">Your cost with Carat</h4>
+            <h4 class="text-left">Carat Private Buses</h4>
           </div>
 
           <div class="col-xs-6">
-            <h3 class="text-right"> p</h3>
+            <h3 class="text-right">R$ 44.616,60</h3>
           </div>
         </div>
 
@@ -37,7 +37,7 @@
             </div>
 
             <div class="col-xs-6">
-              <h3 class="text-right"></h3>
+              <h3 class="text-right">R$ 11.403,00</h3>
             </div>
           </div>
         </div>
@@ -46,10 +46,10 @@
     </div>
   </div>
 
-  <!-- <div class="wrapper-order">
+  <div class="wrapper-order">
     <div class="row">
       <div class="col-sm-12 col-md-3 visible-md-block visible-lg-block">
-        <h4><strong>Company Details</strong></h4>
+        <h4><strong>Order Details</strong></h4>
         <p><%= current_user.company_name %></p>
       </div>
 
@@ -60,15 +60,15 @@
 
       <div class="col-sm-12 col-md-3 text-center visible-md-block visible-lg-block">
         <h4><strong>Payment Type</strong></h4>
-        <p>Credit Card</p>
+        <p>Monthly</p>
       </div>
 
       <div class="col-sm-12 col-md-3 text-right">
         <h4><strong>TOTAL</strong></h4>
-        <p>$300 BRL</p>
+        <p>R$ 3.718,05</p>
       </div>
     </div>
-  </div> -->
+  </div>
 
   <div>
     <%= link_to "PROCEED TO ORDER", orders_new_path, class: "btn-carat-go text-center" %>
