--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -51,7 +51,7 @@
 
       <div class="order-row">
         <div>
-    <%= link_to "CHECKOUT", dashboard_path, class: "btn-carat-go text-center" %>
+    <%= link_to "CHECKOUT", dashboard_path(route: true), class: "btn-carat-go text-center" %>
   </div>
       </div>
     </div>
