--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,9 +1,9 @@
 // Carat Blue BTN
 
 .btn-carat-blue {
-  background-color: #364248;
+  background-color: #FBF0AC;
   letter-spacing: 2px;
-  color: #FBF0AC;
+  color: #364248;
   padding: 17px 15px;
   font-weight: lighter;
   text-decoration: none;
@@ -17,7 +17,7 @@
     transition-duration: 300ms;
     transition-timing-function: ease;
     transition-delay: 0s;
-    background-color: #FBF0AC;
+    background-color: #F4D213;
     color: #364248;
     text-decoration: none;
     font-weight: lighter;
