--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div id="home-banner" class="banner" style="background-image: url('https://scontent.frao1-1.fna.fbcdn.net/v/t1.0-9/39913653_10100165725417274_152167654755401728_n.jpg?_nc_cat=0&oh=09a4d4858034af744d84c5973991ef85&oe=5C05C89A');">
+<div id="home-banner" class="banner" style="background-image: linear-gradient(-180deg, rgba(0,66,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://scontent.frao1-1.fna.fbcdn.net/v/t1.0-9/39913653_10100165725417274_152167654755401728_n.jpg?_nc_cat=0&oh=09a4d4858034af744d84c5973991ef85&oe=5C05C89A');">
   <div id="banner-content" class="banner-content text-center">
     <h2>Commute better & save money</h2>
     <p>An intellegent transportation system to save you money and make your workers happier</p>
