--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -43,7 +43,7 @@
           </div>
           <div class="card-text">
             <h4 class="how-heading">Commute better</h4>
-            <p>Your company saves on transportation costs and your employees get to work comfortably and on time.</p>
+            <p>Carat arranges private, comfortable buses so your employees commute better and faster.</p>
           </div>
         </div>
       </div>
