--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -8,7 +8,13 @@
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
   bottom: 0px;
-  transform: translateY(4em);
+  transform: translateY(3.7em);
+}
+
+@media only screen and (max-width: 400px) {
+  .footer {
+    transform: translateY(0);
+  }
 }
 
 .footer-links a {
