--- a/app/views/employees/dashboard.html.erb
+++ b/app/views/employees/dashboard.html.erb
@@ -38,7 +38,7 @@
 
     </div>
   </div>
-  <div class="col-sm-8">
+  <div class="col-sm-8 no-padding">
     <div id="map" data-markers="<%= @markers.to_json %>"></div>
   </div>
 </div>
