--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -57,16 +57,25 @@ body {
   margin: 0px;
 }
 
+.test {
+          height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+
 #how-it-works {
   // height: 100vh;
   padding-top: 70px;
   background-color: #FEFCEE;
   // display: flex;
   // align-items: center;
+
   h3 {
   font-spacing: 2px;
   font-family: Sofia;
   font-size: 40px;
+
   }
 }
 
